--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.10.2",
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "antd": "^5.22.2",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
