--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-spinners": "^0.13.8",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "sweetalert2": "^11.15.9"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
